bindings/go/libredstr.h

/* redstr - Red team string transformation library */
/* C/Go FFI bindings */
/* Generated with cbindgen. Do not modify manually. */


#ifndef REDSTR_H
#define REDSTR_H

#pragma once

/* Warning: This file is automatically generated. Do not edit manually. */

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

#ifdef __cplusplus
namespace redstr {
#endif  // __cplusplus

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

/*
 Free a string allocated by redstr

 # Safety
 The caller must ensure that `ptr` was allocated by a redstr function
 and has not been freed before
 */
void redstr_free_string(char *ptr);

char *redstr_randomize_capitalization(const char *input);

char *redstr_case_swap(const char *input);

char *redstr_alternate_case(const char *input);

char *redstr_inverse_case(const char *input);

char *redstr_to_camel_case(const char *input);

char *redstr_to_snake_case(const char *input);

char *redstr_to_kebab_case(const char *input);

char *redstr_base64_encode(const char *input);

char *redstr_url_encode(const char *input);

char *redstr_hex_encode(const char *input);

char *redstr_hex_encode_mixed(const char *input);

char *redstr_html_entity_encode(const char *input);

char *redstr_mixed_encoding(const char *input);

char *redstr_homoglyph_substitution(const char *input);

char *redstr_unicode_variations(const char *input);

char *redstr_zalgo_text(const char *input);

char *redstr_space_variants(const char *input);

char *redstr_unicode_normalize_variants(const char *input);

char *redstr_sql_comment_injection(const char *input);

char *redstr_xss_tag_variations(const char *input);

char *redstr_null_byte_injection(const char *input);

char *redstr_path_traversal(const char *input);

char *redstr_command_injection(const char *input);

char *redstr_mongodb_injection(const char *input);

char *redstr_couchdb_injection(const char *input);

char *redstr_dynamodb_obfuscate(const char *input);

char *redstr_nosql_operator_injection(const char *input);

char *redstr_ssti_injection(const char *input);

char *redstr_ssti_framework_variation(const char *template_, const char *framework);

char *redstr_ssti_syntax_obfuscate(const char *input);

char *redstr_leetspeak(const char *input);

char *redstr_rot13(const char *input);

char *redstr_vowel_swap(const char *input);

char *redstr_double_characters(const char *input);

char *redstr_reverse_string(const char *input);

char *redstr_whitespace_padding(const char *input);

char *redstr_js_string_concat(const char *input);

char *redstr_domain_typosquat(const char *input);

char *redstr_advanced_domain_spoof(const char *input);

char *redstr_email_obfuscation(const char *input);

char *redstr_url_shortening_pattern(const char *input);

char *redstr_random_user_agent(void);

char *redstr_tls_fingerprint_variation(const char *input);

char *redstr_accept_language_variation(const char *input);

char *redstr_cloudflare_challenge_variation(const char *input);

char *redstr_http2_header_order(const char *input);

char *redstr_cloudflare_turnstile_variation(const char *input);

char *redstr_cloudflare_challenge_response(const char *input);

char *redstr_tls_handshake_pattern(const char *input);

char *redstr_canvas_fingerprint_variation(const char *input);

char *redstr_webgl_fingerprint_obfuscate(const char *input);

char *redstr_font_fingerprint_consistency(const char *input);

char *redstr_http_header_variation(const char *input);

char *redstr_api_endpoint_variation(const char *input);

char *redstr_graphql_obfuscate(const char *input);

char *redstr_session_token_variation(const char *input);

char *redstr_graphql_variable_injection(const char *input);

char *redstr_graphql_introspection_bypass(const char *input);

char *redstr_jwt_header_manipulation(const char *input);

char *redstr_jwt_payload_obfuscate(const char *input);

char *redstr_jwt_algorithm_confusion(const char *input);

char *redstr_jwt_signature_bypass(const char *input);

char *redstr_powershell_obfuscate(const char *input);

char *redstr_bash_obfuscate(const char *input);

char *redstr_env_var_obfuscate(const char *input);

char *redstr_file_path_obfuscate(const char *input);

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus

#ifdef __cplusplus
}  // namespace redstr
#endif  // __cplusplus

#endif  /* REDSTR_H */